Protect Equity and Prosperを追加

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
         <p>Our never-ending quest for money and fame leads us to the flop. We open the button, the big blind calls and the dealer throws out three community cards. After a twenty second tank on KT3r, action is kindly checked over to us. Now what?</p>
       </div>
 
+      <h2><a href="https://blog.gtowizard.com/protect-equity-and-prosper/" target="_blank">Protect Equity and Prosper</a><span class="date">2024/02/13</span></h2>
+      <div class="preface">
+        <p>When we think about the best hands to bet in a given situation, we tend to consider how well various candidates will perform when called:<br>- Will they be ahead?<br>- Will they have good prospects for improving?<br>- Will they be good candidates for betting later streets, whether for value or as a bluff?</p>
+      </div>
+
       <h2><a href="https://blog.gtowizard.com/how-to-handle-loose-passive-limpers/" target="_blank">How to Handle Loose-Passive Limpers</a><span class="date">2024/03/18</span></h2>
       <div class="preface">
         <p>Solver charts and presolved solutions do not offer much in the way of explicit guidance for responding to limpers. This is because players are generally not incentivized to limp from any position save the SB, and even when they are, the ranges with which a solver would limp are quite different from those employed by recreational players and sometimes even professionals who didn’t study these spots.</p>
