--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
         <p>Our never-ending quest for money and fame leads us to the flop. We open the button, the big blind calls and the dealer throws out three community cards. After a twenty second tank on KT3r, action is kindly checked over to us. Now what?</p>
       </div>
 
+      <h2><a href="https://blog.gtowizard.com/probe-betting/" target="_blank">Probe Betting</a><span class="date">2023/05/08</span></h2>
+      <div class="preface">
+        <p>As far as rules of thumb go in poker, “check to the raiser” is a pretty good one. The aggressor on the previous street generally has the more polar range and so more incentive to bet, while players who just called the previous street have mostly medium-strength hands and less incentive to grow the pot.</p>
+      </div>
+
       <h2><a href="https://blog.gtowizard.com/protect-equity-and-prosper/" target="_blank">Protect Equity and Prosper</a><span class="date">2024/02/13</span></h2>
       <div class="preface">
         <p>When we think about the best hands to bet in a given situation, we tend to consider how well various candidates will perform when called:<br>- Will they be ahead?<br>- Will they have good prospects for improving?<br>- Will they be good candidates for betting later streets, whether for value or as a bluff?</p>
