add Delayed C-Betting

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>GTO Wizard - Articles</h1>
+      <h1><a href="https://blog.gtowizard.com/articles/">GTO Wizard - Articles</a></h1>
     </header>
     <main>
       <h2><a href="https://blog.gtowizard.com/reasons-for-value-betting-in-poker/" target="_blank">Reasons for value betting in poker</a><span class="date">2022/12/06</span></h2>
@@ -34,6 +34,11 @@
       <h2><a href="https://blog.gtowizard.com/probe-betting/" target="_blank">Probe Betting</a><span class="date">2023/05/08</span></h2>
       <div class="preface">
         <p>As far as rules of thumb go in poker, “check to the raiser” is a pretty good one. The aggressor on the previous street generally has the more polar range and so more incentive to bet, while players who just called the previous street have mostly medium-strength hands and less incentive to grow the pot.</p>
+      </div>
+
+      <h2><a href="https://blog.gtowizard.com/delayed-c-betting/" target="_blank">Delayed C-Betting</a><span class="date">2023/05/09</span></h2>
+      <div class="preface">
+        <p>This is a companion piece to Probe Betting. It stands on its own, but understanding how to play these scenarios from both sides will enhance your overall understanding of the underlying concepts. A “delayed c-bet” means checking the flop as the preflop aggressor, then betting the turn.</p>
       </div>
 
       <h2><a href="https://blog.gtowizard.com/protect-equity-and-prosper/" target="_blank">Protect Equity and Prosper</a><span class="date">2024/02/13</span></h2>
